# example_repo

./: .gitignore  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
research/: trials.ipynb
src/DeepClassifier/: __init__.py
