[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8  #on which language i will  work  on
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2  #third party libraray without which my project doesn't work
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3  #runs unit test and integraton test
    mypy>=0.971  #helps to check if there is a typing error
    flake8>=5.0.4 #helps to see if any mistakes in application(eg. extra spaces) #not folllowing standardization
    tox>=3.25.1  #to create differnet working envs and test application locally
    black>=22.8.0 #black is used to check whether code written is following python structure

[options.package_data]
DeepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py